# gcal-term-agenda

./: .flake8  .git-blame-ignore-revs  .gitignore  LICENSE  README.md  agenda.py  async_utils.py  colortrans.py  doublebuffer.py  gcal.py  pyproject.toml  requirements.txt  tailf.py
