[project]
name = "gcal-term-agenda"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "blessed>=1.32.0",
    "google-api-python-client>=2.192.0",
    "google-auth-oauthlib>=1.3.0",
]

[dependency-groups]
deprecated = [
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]
maybe-deprecated = [
    "httplib2>=0.31.2",
    "inotify-simple>=2.0.1",
    "parsedatetime>=2.6",
]
